--- a/render/html/default/tpl/css/base.css
+++ b/render/html/default/tpl/css/base.css
@@ -193,7 +193,7 @@ footer{
   }
 }
 article {
-	border:1px dashed #444;
+
 	margin:1em;
 	padding:1em;
 	background:#fff;
@@ -208,14 +208,11 @@ article {
 	background:#fff;
 	margin:1em 3em;
 	padding:0.5em;
+	display: block;
 }
 article, footer, header, aside, nav {
 
 	position:relative;
-}
-article embed{
-
-	width: 100%;
 }
 footer {
 
@@ -224,7 +221,18 @@ footer {
 	color: #CCC;
 	padding: 0px;
 	margin: 0px;
-	line-height: 1.5;	
+	line-height: 1.5;
+	background: #b8b2b8;
+	background: -moz-linear-gradient(top, #b8b2b8 0%, #131313 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, #b8b2b8), color-stop(100%, #131313));
+	background: -webkit-linear-gradient(top, #b8b2b8 0%, #131313 100%);
+	background: -o-linear-gradient(top, #b8b2b8 0%, #131313 100%);
+	background: -ms-linear-gradient(top, #b8b2b8 0%, #131313 100%);
+	background: linear-gradient(to bottom, #b8b2b8 0%, #131313 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b8b2b8', endColorstr='#131313', GradientType=0 );
+	-webkit-box-shadow: 0px -6px 5px -2px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px -6px 5px -2px rgba(0,0,0,0.75);
+	box-shadow: 0px -6px 5px -2px rgba(0,0,0,0.75);
 }
 div[role="banner"] img {
 
@@ -255,11 +263,66 @@ nav[role="navigation"] {
 	padding-top: 0px;
 	padding-bottom: 0px;
 }
+svg#svg2{
 
+	width: 100%;
+	height: auto;
+	z-index: 1;
+}
+#map_canvas { 
 
+	-webkit-box-shadow: 14px 14px 0px 3px rgba(0,0,0,0.75);
+	-moz-box-shadow: 14px 14px 0px 3px rgba(0,0,0,0.75);
+	box-shadow: 14px 14px 0px 3px rgba(0,0,0,0.75);
+	border: 1px solid black; 
+	background-color: #CCCCCC;
+	display: block;
+	width: 80%; 
+	height: 80%;
+	z-index: 99;
+	min-width: 150px;
+	min-height: 150px;
+}
+.map{ 
 
+	display: block;
+	width: 100%; 
+	height: 100%;
+	min-width: 150px;
+	min-height: 150px;
+}
+#container {
+    margin: 0px auto;
+    width: 90px;
+    height: 80px;
+    border: 1px #333 solid;	
+	display: none;
+	visibility: hidden;
+}
+#videoElement {
+    width: 90px;
+    height: 80px;
+    background-color: #666;
+}
+#canvas {
+    width: 90px;
+    height: 80px;
+	background-color: #CCC;
+	display: none;
+	visibility: hidden;
+}
+#id {
+ 
+ width: 90px;
+ height: 80px;
+}
+#imgtag {
 
+	display: none;
+	visibility: hidden;
+}
+#fileselect {
 
-
-
-
+	display: none;
+	visibility: hidden;
+}
