--- a/render/html/default/tpl/css/geo.css
+++ b/render/html/default/tpl/css/geo.css
@@ -1,6 +1,8 @@
 
-#map-canvas {
-	width:100%;
-	height: auto;
-	text-align: center
+
+#map_canvas { 
+
+	border: 1px solid black; 
+	width: 400px; 
+	height: 300px; 
 }
